# A-Structure-aware-Search-Sharing-Framework-for-CSM

./: CMakeLists.txt
configuration/: config.h
graph/: CMakeLists.txt  graph.cpp  graph.h
streaming/: CMakeLists.txt  global_view_manager.cpp  global_view_manager.h  local_view_manager.cpp  local_view_manager.h  order_manager.cpp  order_manager.h  query_bctree.cpp  query_bctree.h  search_engine.cpp  search_engine.h  streaming_config.h  streaming_engine.cpp  streaming_engine.h  streaming_type.h  subgraph_automorphism_lib.cpp  subgraph_automorphism_lib.h  subgraph_isomorphism_lib.cpp  subgraph_isomorphism_lib.h
utility/: CMakeLists.txt  computesetintersection.cpp  graphoperations.cpp  mem_usage.cpp
